# ra-voc-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: weekly.yml
.hypothesis/constants/: 155262245e0453f5  26283ac46fa00a7e  3f166b63b9f471cb  4c4c6f645c6a17fd  5d62cd4b07775546  6e85ddbd43f71970  7393bbc5a3a81157  7d1a423d50400c3a  8804b59a55d49e98  8f86ef4fa7bf05b8  c8eceffd22400857  c8f41aa0980865bd  d5e7d0deca7a327f  da39a3ee5e6b4b0d  ed2e8f7201608f9b
config/: channels.yaml  segments.yaml
config/prompts/: classifier_v1.md
data/: raw_channel1.json  raw_channel2.json  raw_channel3.json
docs/: index.html  index.json
docs/archive/: 2026-W15.html
qa_checks/: __main__.py  check_data_contracts.py  check_report.py
scripts/: build_dashboard.py
src/voc_agent/: __init__.py  cli.py
src/voc_agent/analysis/: change_detection.py  deep_dive.py  segments.py  trends.py
src/voc_agent/classification/: classifier.py  contracts.py  csat_mapper.py
src/voc_agent/dedup/: hash_dedup.py  normalize.py
src/voc_agent/enrichment/: inline_enricher.py
src/voc_agent/ingestion/: backfill.py  parser_escalation.py  parser_feedback.py  parser_hvc.py  slack_client.py
src/voc_agent/observability/: logging.py
src/voc_agent/reporting/: renderer.py  slack_delivery.py
src/voc_agent/reporting/templates/: report.html.j2
src/voc_agent/storage/: db.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/property/: test_dedup_idempotent.py  test_segment_additivity.py
tests/unit/: test_contracts.py  test_csat_mapper.py  test_dedup.py  test_enrichment.py  test_parser_escalation.py  test_parser_feedback.py  test_parser_hvc.py  test_trends.py
