[project]
name = "ra-voc-analyzer"
version = "1.0.0"
description = "R&A VOC Analyzer — Weekly customer Voice-of-Customer insight agent for Mailchimp Reporting & Analytics"
requires-python = ">=3.11"
dependencies = [
    # Core
    "slack-sdk>=3.27.0",
    "anthropic>=0.80.0",
    "instructor>=1.7.0",
    "tenacity>=9.0.0",
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    # Text processing
    "clean-text>=0.6.0",
    "ftfy>=6.3.0",
    "rapidfuzz>=3.10.0",
    "lingua-language-detector>=2.1.0",
    # Analysis & reporting
    "pandas>=2.2.0",
    "pandera>=0.21.0",
    "plotly>=6.0.0",
    "kaleido>=1.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=63.0",
    "slackblocks>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-recording>=0.13.0",
    "hypothesis>=6.115.0",
    "deepeval>=2.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
]

[project.scripts]
voc-agent = "voc_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voc_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
timeout = 60
